--- a/backend/package.json
+++ b/backend/package.json
@@ -10,13 +10,10 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio",
-    "prisma:seed": "tsx src/prisma/seed.ts"
+    "prisma:seed": "ts-node --files src/prisma/seed.ts"
   },
   "prisma": {
-    "seed": "tsx src/prisma/seed.ts"
-  },
-  "prisma": {
-    "seed": "tsx src/prisma/seed.ts"
+    "seed": "ts-node --files src/prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.7.1",
@@ -47,9 +44,9 @@
     "@types/compression": "^1.7.5",
     "@types/cookie-parser": "^1.4.6",
     "@types/node": "^20.10.5",
+    "nodemon": "^3.0.2",
     "prisma": "^5.7.1",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   }
 }
-
