--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,22 +9,22 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1",
-    "axios": "^1.6.2",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "recharts": "^2.10.3",
-    "react-hook-form": "^7.49.2",
-    "zod": "^3.22.4",
     "@hookform/resolvers": "^3.3.2",
-    "qrcode.react": "^3.1.0",
+    "axios": "^1.6.2",
+    "clsx": "^2.1.0",
     "date-fns": "^3.0.6",
     "lucide-react": "^0.303.0",
-    "clsx": "^2.1.0",
-    "react-hot-toast": "^2.4.1"
+    "qrcode.react": "^3.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.21.1",
+    "recharts": "^2.10.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -39,7 +39,6 @@
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3",
-    "vite": "^5.0.8"
+    "vite": "^7.2.4"
   }
 }
-
